Updated group presentation.

--- a/presentations/group-pres_2011-08-04.tex
+++ b/presentations/group-pres_2011-08-04.tex
@@ -7,9 +7,9 @@
 \foilhead[-1.0cm]{#1}
 }
 
-\title{Stochastic Subgradient Method}
+\title{Objective-first optimization for nanophotonics}
 \author{}
-\MyLogo{Prof.\ S.\ Boyd, EE364b, Stanford University}
+\MyLogo{Jesse Lu, Jelena Vuckovic group, Stanford University}
 \date{}
 
 \begin{document}
@@ -17,19 +17,17 @@
 \maketitle
 
 \BIT \itemsep -1pt
-\item noisy unbiased subgradient
-\item stochastic subgradient method
-\item convergence proof
-\item stochastic programming
-\item expected value of convex function
-\item on-line learning and adaptive signal processing
+\item definition
+\item field setup: boundary-value problem
+\item structure setup: level-set formulation
+\item example
+\item ongoing and future work
 \EIT
 
 \vfill
 
-\oursection{Noisy unbiased subgradient}
-
-\BIT
+\oursection{Definition}
+Si\BIT
 \item
 random vector $\tilde g \in \reals^n$ is a
 \textbf{noisy unbiased subgradient} for
