Corrected wrong reference to matlab file on slide 15.

--- a/presentations/group-pres_2011-08-04.tex
+++ b/presentations/group-pres_2011-08-04.tex
@@ -215,11 +215,11 @@ source: \url{http://en.wikipedia.org/wiki/Level_set_method}
 \newpage
 
 \BIT
-\item to test, hold $x$ constant, and update $p$ 
+\item to test, hold $x$ constant, and update $p$ (iterations 0, 5, 10, 15, 20 shown)
 \begin{center}
-\includegraphics[width=0.6\textwidth]{../figures/structure-progression.jpg} \\
+\includegraphics[width=0.5\textwidth]{../figures/structure-progression.jpg} \\
 \end{center}
-\item code at \url{https://github.com/JesseLu/level-set} (\texttt{demo.m})
+\item code at \url{https://github.com/JesseLu/level-set} (\texttt{demo\_indep\_levelset.m})
 \item new code at \url{https://github.com/JesseLu/lset-opt}
 \EIT
 
