Changed figure source to public domain.

--- a/presentations/group-pres_2011-08-04.tex
+++ b/presentations/group-pres_2011-08-04.tex
@@ -193,7 +193,7 @@ ob-1 should be less dependent on starting guess
 \item implicitly describe boundary using the \emph{level-set} of higher-dimensional function $\phi$
 \begin{center}
 \includegraphics[width=0.45\textwidth]{../figures/level-set.jpg} \\
-source: \url{http://en.wikipedia.org/wiki/Level_set_method}
+source: public domain
 \end{center}
 \EIT
 \newpage
