Updated ob-1 presentation with L-bend example.

--- a/presentations/ob1_aug-2011/objective-first.tex
+++ b/presentations/ob1_aug-2011/objective-first.tex
@@ -253,10 +253,20 @@ source: public domain
 \end{center}
 \item slightly more power transmitted than reflected, a lot of room for improvement
 \EIT
+\newpage
+
+\BIT
+\item L-bend optimization, and testing
+\begin{center}
+\includegraphics[width=0.7\textwidth]{figures/Lopt.jpg} 
+\includegraphics[width=0.7\textwidth]{figures/Ltest.jpg} 
+\end{center}
+\EIT
+
 
 \oursection{Ongoing and future work}
 \BIT
-\item currently working out some kinks in level-set code which cause the structure update to ``jam''
+\item using both $E$- and $H$-fields may be detrimental, try with just $H$-fields
 \EIT
 
 Next milestones:
