Included new figures.

--- a/presentations/ob1_aug-2011/objective-first.tex
+++ b/presentations/ob1_aug-2011/objective-first.tex
@@ -266,7 +266,7 @@ source: public domain
 
 \oursection{Ongoing and future work}
 \BIT
-\item using both $E$- and $H$-fields may be detrimental, try with just $H$-fields
+\item .using both $E$- and $H$-fields may be detrimental, try with just $H$-fields
 \EIT
 
 Next milestones:
