--- a/presentations/fios_2011/abstract/abstract.tex
+++ b/presentations/fios_2011/abstract/abstract.tex
@@ -17,7 +17,7 @@ efficiency.
 Our algorithm is fast ($\sim$20 min.), can be extended to multiple dimensions,
  and requires no trial-and-error.
 \end{abstract}
-\ocis{000.0000.}
+\ocis{230.7370, 130.3990.}
 
 % Importance of problem.
 \section{Motivation}
@@ -37,13 +37,13 @@ The resulting devices are extremely compact, on the order of only 1-2 vacuum
 wavelengths per side, and can couple between seemingly arbitrary waveguide 
 modes.
 Notably, neither trial-and-error nor the modeling of device subcomponents 
-are utilized.
+is needed.
 
 % How it works.
 \section{Method}
 The algorithm operates by calculating the boundary electromagnetic fields
-needed for perfect operation (100\% conversion), and then varying the 
-interior fields and permittivities to reproduce the boundary fields.  
+needed for perfect operation (100\% coupling efficiency), and then varying the 
+interior fields and permittivities to reproduce those boundary fields.  
 Numerically, we fix $H({border}) = H_\text{perfect}$,
 and then minimize the residual in the electromagnetic wave equation,
 $\| \nabla \times \epsilon^{-1} \nabla \times H - \mu \omega^2 H \|^2$, 
@@ -57,22 +57,78 @@ coupled with the boundary field formulation,
 that greatly speeds up the design process by eliminating the need to  
 repeatedly solve the wave equation.
 
-Lastly, we validate our designs in simulation (finite-difference 
-frequency-domain) by exciting the input waveguide mode and then calculating
-the transmitted power in the desired output waveguide mode.
+Lastly, we validate our designs in simulation 
+(finite-difference frequency-domain, 2D tranverse electric mode) 
+by exciting the input waveguide mode and then calculating the transmitted power
+in the desired output waveguide mode.
 
 \section{Results}
 Figs. 1, 2 and 3 show the result of our algorithm, as applied to the design 
 of nanophotonic waveguide couplers in two dimensions.  
+All devices are extremely compact, and yet exhibit high coupling efficiency; 
+even in spite of significant differences in mode size and mode symmetry.
 
-Note that we allow $\epsilon$ to vary continuously between the
-permittivity of air and silicon, even though discrete values are more
-amenable to fabrication.
+Lastly, for numerical reasons, we allow values of $\epsilon$ to vary 
+continuously between $\epsilon_\text{air} = 1$ and 
+$\epsilon_\text{silicon} = 12.25$, even though discrete values are more
+amenable to fabrication. 
+Forcing discreteness in $\epsilon$ will be investigated in future work.
+
+
+This work has been supported in part by the 
+AFOSR MURI for Complex and Robust On-chip Nanophotonics (Dr. Gernot Pomrenke),
+grant number FA9550-09-1-0704.
+% \begin{thebibliography}{99}
+% \bibitem{lipson} Almeida et al, Optics Letters \textbf{28}, 1302-1304 (2003).
+% \end{thebibliography}
+
+
+% Coupling efficiency
+% Design time
+% Size of the device
+% Frequency
 \begin{figure}[htbp]
-    \includegraphics[width=\textwidth]{fig/fiber.jpg}
-    \caption{caption test}
+    \centering
+    \includegraphics[width=0.9\textwidth]{fig/fiber.jpg}
+    \caption{Waveguide coupler for a wide, low-index waveguide. 
+        The dielectric structure of the coupler and surrounding input and
+        output waveguides is shown on the left, while the simulation
+        validating our results is shown on the right.
+        The coupler converts $96.3\%$ of the input power to the
+        designated output mode.
+        The device is extremely compact, 
+        convering only $36 \times 66$ grid points,
+        where the vacuum wavelength is 42 grid points.
+        Computation time was 20 minutes on a personal computer.}
 \end{figure}
-% \includegraphics[width=\textwidth]{fig/mode-conv.jpg}
-% \includegraphics[width=\textwidth]{fig/air-core.jpg}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.9\textwidth]{fig/mode-conv.jpg}
+    \caption{Coupler that converts the fundamental waveguide mode to the
+        second-order waveguide mode.
+        This problem is quite difficult since the two modes are of 
+        opposite symmetry.
+        For example, adiabatic approaches cannot be applied to this case.
+        However, our method produces a device 
+        (which has the same dimensions and vacuum wavelength as Fig. 1) 
+        which achieves a coupling efficiency of $95.5\%$. 
+        Computation time was extended to 50 minutes to improve efficiency.
+        }
+\end{figure}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.9\textwidth]{fig/air-core.jpg}
+    \caption{Coupler to an air-core mode.
+        Here, not only are the modes of opposite symmetry,
+        but the output waveguide operates on a fundamentally different
+        principle (guided by Bragg reflection) than the input waveguide 
+        (index guided).
+        The device still achieves an efficiency of $83.3\%$, demonstrating the
+        versatility of our method.
+        The vacuum wavelength is 25 grid points, 
+        while the device footprint is still $36 \times 66$ grid points.
+        Computation time was 20 minutes.
+        }
+\end{figure}
 \end{document}
 
